tests/baselines/reference/tsxStatelessFunctionComponentWithDefaultTypeParameter2.errors.txt
file.tsx(13,24): error TS2322: Type 'number' is not assignable to type 'string'.


==== file.tsx (1 errors) ====
    import React = require('react')
    
    interface MyComponentProp {
        values: string;
    }
    
    function MyComponent1<T extends MyComponentProp>(attr: T) {
        return <div>attr.values</div>
    }
    
    
    // Error
    let i1 = <MyComponent1 values={5}/>;
                           ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 file.tsx:4:5: The expected type comes from property 'values' which is declared here on type 'IntrinsicAttributes & MyComponentProp'